[package]
name = "koba-rs"
description = "Rust rewrite of https://github.com/simon0302010/koba, a terminal image renderer."
version = "0.1.1"
edition = "2024"
repository = "https://github.com/simon0302010/koba-rs"
readme = "README.md"
license = "GPL-3.0-only"

[dependencies]
image = "0.25"
log = "0.4"
simple_logger = "5.1"
clap = { version = "4.5", features = ["derive"] }
terminal_size = "0.4"
fontdue = "0.9"
colored = "3.0"